# youtrack-catchup

./: .env.template  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
src/youtrack_catchup/: __init__.py  __main__.py  api_client.py  config.py  issue_summarizer.py  llm_provider.py
